--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 </head>
 <body>
 
-  <h2>Logic Comparison</h2>
-  First logic reposition: <br>
-  <input type="text" id="logcomp_firstinput">
-  <br>
-  Second logic reposition:<br>
-  <input type="text" id="logcomp_secondinput">
-  <input type="submit" id="logcomp_submit">
-  <p id="logcomp_result"></p>
+  <section class="main">
+    <section class="logcomp_main">
+      <h2>Logic Comparison</h2>
+      First logic preposition: <br>
+      <input type="text" class="logcomp_firstinput">
+      <br>
+      Second logic preposition:<br>
+      <input type="text" class="logcomp_secondinput">
+      <input type="submit" class="logcomp_submit">
+      <p class="logcomp_result_holder">Result: <span class="logcomp_result"></span></p>
+    </section>
+  </section>
 
 
 
