--- a/index.html
+++ b/index.html
@@ -1,34 +1,18 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>Testing Grounds</title>
-  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <title>App bue de fixe</title>
+  <link rel="stylesheet" href="bootstrap.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <section class="main">
-    <section class="logcomp_main">
-      <h2>Logic Comparison</h2>
-      First logic preposition: <br>
-      <input type="text" class="logcomp_firstinput">
-      <br>
-      Second logic preposition:<br>
-      <input type="text" class="logcomp_secondinput">
-      <input type="submit" class="logcomp_submit">
-      <p class="logcomp_result_holder">Result: <span class="logcomp_result"></span></p>
-    </section>
-  </section>
+<section class="wrapper jumbotron">
 
 
-
-
-
-
-
-
-  <script src="js/jquery-1.11.3.min.js"></script>
-  <script src="js/main.js"></script>
-
-
-  </script>
+</section>
+<script src="jquery.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
