--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <h3 class="section_title skills_title">Skills</h3>
 
-    <section class="card primary_project_card">
+    <section class="card primary_skills_card">
 
       <h4 class="card_title primary_card_title">Primary</h4>
 
@@ -124,9 +124,9 @@
 
     </section>
 
-    <section class="card secondary_project_card">
+    <section class="card secondary_skills_card">
 
-      <h4 class="card_title secondary_card_title">Primary</h4>
+      <h4 class="card_title secondary_card_title">Secondary</h4>
 
       <div class="skill_container">
 
@@ -181,27 +181,27 @@
 
     <h3 class="section_title contact_title">Contact</h3>
 
-    <section class="card github_contact_card">
+    <section class="card contact_card github_contact_card">
 
       <img class="github_contact_image" src="./assets/icons_md/icon_contact_github.png"/>
 
-      <a class="github_contact_link" href="https://github.com/aromano272">github.com/aromano272</a>
+      <a class="btn card_link contact_link github_contact_link" href="https://github.com/aromano272">github.com/aromano272</a>
 
     </section>
 
-    <section class="card linkedin_contact_card">
+    <section class="card contact_card linkedin_contact_card">
 
       <img class="linkedin_contact_image" src="./assets/icons_md/icon_contact_linkedin.png"/>
 
-      <a class="linkedin_contact_link" href="https://linkedin.com/in/andre-romano">linkedin.com/in/andre-romano</a>
+      <a class="btn card_link contact_link linkedin_contact_link" href="https://linkedin.com/in/andre-romano">linkedin.com/in/andre-romano</a>
 
     </section>
 
-    <section class="card email_contact_card">
+    <section class="card contact_card email_contact_card">
 
       <img class="email_contact_image" src="./assets/icons_md/icon_contact_email.png"/>
 
-      <a class="email_contact_link" href="#">andre.romano272@hotmail.com</a>
+      <a class="btn card_link contact_link email_contact_link" href="#">andre.romano272@hotmail.com</a>
 
     </section>
 
@@ -213,9 +213,9 @@
 
 
 
-<script src="libs/jquery.min.js"/>
-<script src="libs/bootstrap.min.js"/>
-<script src="js/main.js"/>
-<script src="http://localhost:35729/livereload.js"/>
+<script src="libs/jquery.min.js"></script>
+<script src="libs/bootstrap.min.js">></script>
+<script src="js/main.js"></script>
+<script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
