--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Andre Romano - Developer</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="libs/normalize.css"/>
     <!-- <link rel="stylesheet" type="text/css" href="libs/bootstrap.min.css"/> -->
     <!-- <link rel="stylesheet" type="text/css" href="libs/bootstrap-theme.min.css"/> -->
