changed up some sizes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a class="btn nav_btn" href="#">Contact</a>
       </nav>
 
+      <img class="profile_photo" src="./assets/icons_hd/icon_profile_photo.png"/>
+
       <h3 class="section_title profile_name">André Romano</h3>
 
     </header>
@@ -38,7 +40,7 @@
 
     <h3 class="section_title projects_title">Projects</h3>
 
-    <section class="card voicelyn_project_card">
+    <!-- <section class="card voicelyn_project_card">
 
       <h4 class="card_title voicelyn_card_title">Voicelyn</h4>
 
@@ -48,7 +50,7 @@
 
       <a class="btn card_link voicelyn_card_link" href="TODO">Play Store</a>
 
-    </section>
+    </section> -->
 
     <section class="card simpleathlete_project_card">
 
