--- a/index.html
+++ b/index.html
@@ -11,10 +11,23 @@
 </head>
 <body>
 
+  <section class="page_nav_section">
+
+    <h3 class="section_title page_nav_profile_name">Romano</h3>
+
+    <nav class="page_nav">
+      <a class="btn nav_btn" href="#">About</a>
+      <a class="btn nav_btn" href="#">Projects</a>
+      <a class="btn nav_btn" href="#">Skills</a>
+      <a class="btn nav_btn" href="#">Contact</a>
+    </nav>
+
+  </section>
+
   <section class="section about_section">
     <header class="about_header">
 
-      <nav>
+      <nav class="about_nav">
         <a class="btn nav_btn" href="#">About</a>
         <a class="btn nav_btn" href="#">Projects</a>
         <a class="btn nav_btn" href="#">Skills</a>
