--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
     <h3 class="section_title page_nav_profile_name">Romano</h3>
 
     <nav class="page_nav">
-      <a class="btn nav_btn" href="#">About</a>
-      <a class="btn nav_btn" href="#">Projects</a>
-      <a class="btn nav_btn" href="#">Skills</a>
-      <a class="btn nav_btn" href="#">Contact</a>
+      <a class="btn nav_btn" href="#about">About</a>
+      <a class="btn nav_btn" href="#projects">Projects</a>
+      <a class="btn nav_btn" href="#skills">Skills</a>
+      <a class="btn nav_btn" href="#contact">Contact</a>
     </nav>
 
   </section>
 
-  <section class="section about_section">
+  <section id="about" class="section about_section">
     <header class="about_header">
 
       <nav class="about_nav">
-        <a class="btn nav_btn" href="#">About</a>
-        <a class="btn nav_btn" href="#">Projects</a>
-        <a class="btn nav_btn" href="#">Skills</a>
-        <a class="btn nav_btn" href="#">Contact</a>
+        <a class="btn nav_btn" href="#about">About</a>
+        <a class="btn nav_btn" href="#projects">Projects</a>
+        <a class="btn nav_btn" href="#skills">Skills</a>
+        <a class="btn nav_btn" href="#contact">Contact</a>
       </nav>
 
       <img class="profile_photo" src="./assets/icons_hd/icon_profile_photo.png"/>
@@ -49,7 +49,7 @@
   </section>
 
 
-  <section class="section projects_section">
+  <section id="projects" class="section projects_section">
 
     <h3 class="section_title projects_title">Projects</h3>
 
@@ -81,7 +81,7 @@
   </section>
 
 
-  <section class="section skills_section">
+  <section id="skills" class="section skills_section">
 
     <h3 class="section_title skills_title">Skills</h3>
 
@@ -188,7 +188,7 @@
   </section>
 
 
-  <section class="section contact_section">
+  <section id="contact" class="section contact_section">
 
     <h3 class="section_title contact_title">Contact</h3>
 
