--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <title>Andre Romano - Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="libs/normalize.css"/>
@@ -14,10 +14,9 @@
 
   <section class="page_nav_section">
 
-    <h3 class="section_title page_nav_profile_name">Romano</h3>
+    <a class="section_title page_nav_profile_name" href="#about">Romano</a>
 
     <nav class="page_nav">
-      <a class="btn nav_btn" href="#about">About</a>
       <a class="btn nav_btn" href="#projects">Projects</a>
       <a class="btn nav_btn" href="#skills">Skills</a>
       <a class="btn nav_btn" href="#contact">Contact</a>
@@ -29,7 +28,6 @@
     <header class="about_header">
 
       <nav class="about_nav">
-        <a class="btn nav_btn" href="#about">About</a>
         <a class="btn nav_btn" href="#projects">Projects</a>
         <a class="btn nav_btn" href="#skills">Skills</a>
         <a class="btn nav_btn" href="#contact">Contact</a>
@@ -195,7 +193,7 @@
 
     <section class="card contact_card github_contact_card">
 
-      <img class="github_contact_image" src="./assets/icons_md/icon_contact_github.png"/>
+      <img class="contact_image github_contact_image" src="./assets/icons_md/icon_contact_github.png"/>
 
       <a class="btn card_link contact_link github_contact_link" href="https://github.com/aromano272">github.com/aromano272</a>
 
@@ -203,7 +201,7 @@
 
     <section class="card contact_card linkedin_contact_card">
 
-      <img class="linkedin_contact_image" src="./assets/icons_md/icon_contact_linkedin.png"/>
+      <img class="contact_image linkedin_contact_image" src="./assets/icons_md/icon_contact_linkedin.png"/>
 
       <a class="btn card_link contact_link linkedin_contact_link" href="https://linkedin.com/in/andre-romano">linkedin.com/in/andre-romano</a>
 
@@ -211,7 +209,7 @@
 
     <section class="card contact_card email_contact_card">
 
-      <img class="email_contact_image" src="./assets/icons_md/icon_contact_email.png"/>
+      <img class="contact_image email_contact_image" src="./assets/icons_md/icon_contact_email.png"/>
 
       <a class="btn card_link contact_link email_contact_link" href="#">andre.romano272@hotmail.com</a>
 
