--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     </section> -->
 
-    <section class="card simpleathlete_project_card">
+    <section class="card project_card simpleathlete_project_card">
 
       <h4 class="card_title simpleathlete_card_title">Simple Athlete</h4>
 
@@ -84,7 +84,7 @@
 
     <h3 class="section_title skills_title">Skills</h3>
 
-    <section class="card primary_skills_card">
+    <section class="card skill_card primary_skills_card">
 
       <h4 class="card_title primary_card_title">Primary</h4>
 
@@ -134,7 +134,7 @@
 
     </section>
 
-    <section class="card secondary_skills_card">
+    <section class="card skill_card secondary_skills_card">
 
       <h4 class="card_title secondary_card_title">Secondary</h4>
 
