--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     </header>
 
-
-
-    <section class="card about_card">
-      <p class="card_description about_card_description">Some random description about me. <br/>lorem ipus som emore random shit about me bla bla bal teste montes de cenas ditas aqui extremamente importantes que toda a gente vai ler do principio ao fim.</p>
+    <section class="cards_container about_cards_container">
+      <section class="card about_card">
+        <p class="card_description about_card_description">Some random description about me. <br/>lorem ipus som emore random shit about me bla bla bal teste montes de cenas ditas aqui extremamente importantes que toda a gente vai ler do principio ao fim.</p>
+      </section>
     </section>
 
   </section>
@@ -52,28 +52,32 @@
 
     <h3 class="section_title projects_title">Projects</h3>
 
-    <!-- <section class="card voicelyn_project_card">
+    <section class="cards_container project_cards_container">
 
-      <h4 class="card_title voicelyn_card_title">Voicelyn</h4>
+      <!-- <section class="card voicelyn_project_card">
 
-      <img class="card_img voicelyn_card_img" src="TODO"/>
+        <h4 class="card_title voicelyn_card_title">Voicelyn</h4>
 
-      <p class="card_description voicelyn_card_description">App description in this spot<br/> Lorem ipsum bla bla moar lorem moat moat moat ipsum.</p>
+        <img class="card_img voicelyn_card_img" src="TODO"/>
 
-      <a class="btn card_link voicelyn_card_link" href="TODO">Play Store</a>
+        <p class="card_description voicelyn_card_description">App description in this spot<br/> Lorem ipsum bla bla moar lorem moat moat moat ipsum.</p>
 
-    </section> -->
+        <a class="btn card_link voicelyn_card_link" href="TODO">Play Store</a>
 
-    <section class="card project_card simpleathlete_project_card">
+      </section> -->
 
-      <h4 class="card_title simpleathlete_card_title">Simple Athlete</h4>
+      <section class="card project_card simpleathlete_project_card">
 
-      <img class="card_img simpleathlete_card_img" src="./assets/simpleathlete_logos2.png"/>
+        <h4 class="card_title simpleathlete_card_title">Simple Athlete</h4>
 
-      <p class="card_description simpleathlete_card_description">A Fitness app targeted for intermediate to experienced users that focuses on workout plans management and allows users to daily log their food intake while keeping track of their own set goals.</p>
+        <img class="card_img simpleathlete_card_img" src="./assets/simpleathlete_logos2.png"/>
 
-      <!-- tentar link: market://details?id=com.aromano.simpleathlete em mobile e ver se funciona -->
-      <a class="btn card_link simpleathlete_card_link" href="http://play.google.com/store/apps/details?id=com.aromano.simpleathlete">Play Store</a>
+        <p class="card_description simpleathlete_card_description">A Fitness app targeted for intermediate to experienced users that focuses on workout plans management and allows users to daily log their food intake while keeping track of their own set goals.</p>
+
+        <!-- tentar link: market://details?id=com.aromano.simpleathlete em mobile e ver se funciona -->
+        <a class="btn card_link simpleathlete_card_link" href="http://play.google.com/store/apps/details?id=com.aromano.simpleathlete">Play Store</a>
+
+      </section>
 
     </section>
 
@@ -84,103 +88,107 @@
 
     <h3 class="section_title skills_title">Skills</h3>
 
-    <section class="card skill_card primary_skills_card">
+    <section class="cards_container skill_cards_container">
 
-      <h4 class="card_title primary_card_title">Primary</h4>
+      <section class="card skill_card primary_skills_card">
 
-      <div class="skill_container">
+        <h4 class="card_title primary_card_title">Primary</h4>
 
-        <img class="skill_image" src="./assets/icons_md/icon_skills_android.png"/>
+        <div class="skill_container">
 
-        <p class="skill_title">Android SDK</p>
+          <img class="skill_image" src="./assets/icons_md/icon_skills_android.png"/>
 
-      </div>
+          <p class="skill_title">Android SDK</p>
 
-
-      <div class="skill_container">
-
-        <img class="skill_image" src="./assets/icons_md/icon_skills_java.png"/>
-
-        <p class="skill_title">Java</p>
-
-      </div>
+        </div>
 
 
-      <div class="skill_container">
+        <div class="skill_container">
 
-        <img class="skill_image" src="./assets/icons_md/icon_skills_webservices.png"/>
+          <img class="skill_image" src="./assets/icons_md/icon_skills_java.png"/>
 
-        <p class="skill_title">Web Services</p>
+          <p class="skill_title">Java</p>
 
-      </div>
-
-
-      <div class="skill_container">
-
-        <img class="skill_image" src="./assets/icons_md/icon_skills_sql.png"/>
-
-        <p class="skill_title">SQL &amp; NoSQL DBs</p>
-
-      </div>
+        </div>
 
 
-      <div class="skill_container">
+        <div class="skill_container">
 
-        <img class="skill_image" src="./assets/icons_md/icon_skills_git.png"/>
+          <img class="skill_image" src="./assets/icons_md/icon_skills_webservices.png"/>
 
-        <p class="skill_title">Git</p>
+          <p class="skill_title">Web Services</p>
 
-      </div>
-
-    </section>
-
-    <section class="card skill_card secondary_skills_card">
-
-      <h4 class="card_title secondary_card_title">Secondary</h4>
-
-      <div class="skill_container">
-
-        <img class="skill_image" src="./assets/icons_md/icon_skills_js.png"/>
-
-        <p class="skill_title">JavaScript</p>
-
-      </div>
+        </div>
 
 
-      <div class="skill_container">
+        <div class="skill_container">
 
-        <img class="skill_image" src="./assets/icons_md/icon_skills_ps.png"/>
+          <img class="skill_image" src="./assets/icons_md/icon_skills_sql.png"/>
 
-        <p class="skill_title">Photoshop</p>
+          <p class="skill_title">SQL &amp; NoSQL DBs</p>
 
-      </div>
-
-
-      <div class="skill_container">
-
-        <img class="skill_image" src="./assets/icons_md/icon_skills_ai.png"/>
-
-        <p class="skill_title">Illustrator</p>
-
-      </div>
+        </div>
 
 
-      <div class="skill_container">
+        <div class="skill_container">
 
-        <img class="skill_image" src="./assets/icons_md/icon_skills_3ds.png"/>
+          <img class="skill_image" src="./assets/icons_md/icon_skills_git.png"/>
 
-        <p class="skill_title">3Ds MAX</p>
+          <p class="skill_title">Git</p>
 
-      </div>
+        </div>
+
+      </section>
+
+      <section class="card skill_card secondary_skills_card">
+
+        <h4 class="card_title secondary_card_title">Secondary</h4>
+
+        <div class="skill_container">
+
+          <img class="skill_image" src="./assets/icons_md/icon_skills_js.png"/>
+
+          <p class="skill_title">JavaScript</p>
+
+        </div>
 
 
-      <div class="skill_container">
+        <div class="skill_container">
 
-        <img class="skill_image" src="./assets/icons_md/icon_skills_swift.png"/>
+          <img class="skill_image" src="./assets/icons_md/icon_skills_ps.png"/>
 
-        <p class="skill_title">Swift 3</p>
+          <p class="skill_title">Photoshop</p>
 
-      </div>
+        </div>
+
+
+        <div class="skill_container">
+
+          <img class="skill_image" src="./assets/icons_md/icon_skills_ai.png"/>
+
+          <p class="skill_title">Illustrator</p>
+
+        </div>
+
+
+        <div class="skill_container">
+
+          <img class="skill_image" src="./assets/icons_md/icon_skills_3ds.png"/>
+
+          <p class="skill_title">3Ds MAX</p>
+
+        </div>
+
+
+        <div class="skill_container">
+
+          <img class="skill_image" src="./assets/icons_md/icon_skills_swift.png"/>
+
+          <p class="skill_title">Swift 3</p>
+
+        </div>
+
+      </section>
 
     </section>
 
@@ -191,27 +199,31 @@
 
     <h3 class="section_title contact_title">Contact</h3>
 
-    <section class="card contact_card github_contact_card">
+    <section class="cards_container contact_cards_container">
 
-      <img class="contact_image github_contact_image" src="./assets/icons_md/icon_contact_github.png"/>
+      <section class="card contact_card github_contact_card">
 
-      <a class="btn card_link contact_link github_contact_link" href="https://github.com/aromano272">github.com/aromano272</a>
+        <img class="contact_image github_contact_image" src="./assets/icons_md/icon_contact_github.png"/>
 
-    </section>
+        <a class="btn card_link contact_link github_contact_link" href="https://github.com/aromano272">github.com/aromano272</a>
 
-    <section class="card contact_card linkedin_contact_card">
+      </section>
 
-      <img class="contact_image linkedin_contact_image" src="./assets/icons_md/icon_contact_linkedin.png"/>
+      <section class="card contact_card linkedin_contact_card">
 
-      <a class="btn card_link contact_link linkedin_contact_link" href="https://linkedin.com/in/andre-romano">linkedin.com/in/andre-romano</a>
+        <img class="contact_image linkedin_contact_image" src="./assets/icons_md/icon_contact_linkedin.png"/>
 
-    </section>
+        <a class="btn card_link contact_link linkedin_contact_link" href="https://linkedin.com/in/andre-romano">linkedin.com/in/andre-romano</a>
 
-    <section class="card contact_card email_contact_card">
+      </section>
 
-      <img class="contact_image email_contact_image" src="./assets/icons_md/icon_contact_email.png"/>
+      <section class="card contact_card email_contact_card">
 
-      <a class="btn card_link contact_link email_contact_link" href="#">andre.romano272@hotmail.com</a>
+        <img class="contact_image email_contact_image" src="./assets/icons_md/icon_contact_email.png"/>
+
+        <a class="btn card_link contact_link email_contact_link" href="#">andre.romano272@hotmail.com</a>
+
+      </section>
 
     </section>
 
