finished up descritpion and general layout

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="cards_container about_cards_container">
       <section class="card about_card">
-        <p class="card_description about_card_description">Some random description about me. <br/>lorem ipus som emore random shit about me bla bla bal teste montes de cenas ditas aqui extremamente importantes que toda a gente vai ler do principio ao fim.</p>
+        <p class="card_description about_card_description">Hey! My name is André Romano and I've been learning my way through developing Android and Web Applications from the conceptual stages, to the design and marketing, and with greater focus on the programming aspect.</br>Feel free to reach me for projects.</p>
       </section>
     </section>
 
